# cellarium

./: Cargo.toml  README.md
discoveries/: gray-scott-1.json  gray-scott-2.json  smoothlife-pellet-gliders.json
docs/: api.md  impl.md
examples/: belousov_zhabotinsky.rs  brians_brain.rs  brusselator.rs  cahn_hilliard.rs  cascade.rs  coupled_logistic.rs  cyclic.rs  erosion.rs  fitzhugh_nagumo.rs  game_of_life.rs  gray_scott.rs  kaneko_cml.rs  kuramoto.rs  lenia.rs  mnca.rs  physarum.rs  predator_prey.rs  rock_paper_scissors.rs  sandpile.rs  smoothlife.rs  wave.rs  wireworld.rs
macros/: Cargo.toml
macros/src/: check.rs  layout.rs  lib.rs  lower.rs  parse.rs
src/: lib.rs  pipeline.rs  runtime.rs  texture.rs  tui.rs  types.rs
