[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "cellarium"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated cellular automata via proc-macro WGSL codegen"
license = "MIT OR Apache-2.0"

[dependencies]
cellarium-macros = { path = "macros" }
wgpu = "28.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
